# HandyBase

./: .gitignore  README.md  handybase.in  io.github.twrightsman.HandyBase.json  meson.build
data/: handybase.gresource.xml  io.github.twrightsman.HandyBase.appdata.xml.in  io.github.twrightsman.HandyBase.desktop.in  io.github.twrightsman.HandyBase.gschema.xml  meson.build
data/po/: POTFILES  meson.build
data/style/: handybase.css
data/ui/: window.ui
src/: meson.build
src/handybase/: __init__.py  application.py  window.py
